--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "main": "background.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.2.1",
     "flv.js": "^1.5.0",
     "hls.js": "^0.12.3",
     "vue": "^2.6.6",
+    "vue-echarts": "^4.0.3",
     "vue-grid-layout": "^2.3.4",
     "vuetify": "^1.5.5",
     "vuex": "^3.1.0"
